redesigned - moved much information around

--- a/faq.html
+++ b/faq.html
@@ -166,7 +166,10 @@ moved it here.</p>
 <h3 id="ide">where is the IDE?</h3>
 
 <p>Use <a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>,
- maybe with <a href="http://ilisp.cons.org">ILISP</a>.</p>
+ running CLISP as an "inferior lisp"
+ (i.e., CLISP running as an Emacs sub-process).
+ Some people prefer <a href="http://ilisp.cons.org/">ILISP</a> to the
+ standard Emacs facilities.</p>
 
 <p>See also <a href="http://cl-cookbook.sourceforge.net/windows.html">The
   Common Lisp Cookbook</a></p>
