--- a/propaganda.html
+++ b/propaganda.html
@@ -71,6 +71,13 @@
   </ul></dd>
 </dl>
 
+<h2>CLISP and Unicode</h2>
+
+<p>Here is a <a href="fibjap.lisp" charset="utf-8">source file</a>
+ with Japanese characters in it.
+ <a href="fibjap-emacs.png">Edited in GNU Emacs</a>,
+ then <a href="fibjap-xterm.png">run in xterm</a>.</p>
+
 <h2>CLISP Performance</h2>
 
 <p>CLISP compares well with other ANSI CL implementations with respect
