--- a/resources.html
+++ b/resources.html
@@ -167,6 +167,11 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   [<a href="mailto:plasmbug@dia.uniroma3.it">Alberto Paoluzzi</a>]</dt>
   <dd><a href="http://www.dia.uniroma3.it/~plasm/index.html"
               >http://www.dia.uniroma3.it/~plasm/index.html</a></dd>
+ <dt><strong>mod_lisp</strong> - hook CLISP into
+     <a href="http://www.apache.org">Apache</a>
+     [<a href="mailto:Marc.Battyani@fractalconcept.com">Marc Battyani</a>]</dt>
+  <dd><a href="http://www.fractalconcept.com/asp/mod_lisp"
+         >http://www.fractalconcept.com/asp/mod_lisp</a></dd>
 </dl>
 
 <p>See also the
