more about consulting

--- a/faq.html
+++ b/faq.html
@@ -35,9 +35,11 @@ of the issues will be provided).</p>
 <p>Please <a href="mailto:clisp-list@lists.sf.net?subject=FAQ">submit</a>
 more questions (and answers!)</p>
 
-<p>This document is distributed by the GNU CLISP project under the
-<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation
-License</a>.</p>
+<p>This document is distributed by the
+ <a href="http://www.gnu.org/">GNU</a>
+ <a href="http://clisp.cons.org">CLISP</a> project under the
+ <a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation
+  License</a>.</p>
 
 <h2 id="index">Index</h2>
 
@@ -138,12 +140,15 @@ moved it here.</p>
    patches, offer help.</dd>
  <dt><strong>Individual CLISP developers</strong></dt>
   <dd>This is <strong>never</strong> the right thing to do, unless you
-   want to <strong>hire</strong> this developer to do some CLISP
-   consulting (the only exception to this rule are people who have
-   already contributed to CLISP in the past, or published general Lisp
-   books or are important for some other reason :-).
+   want to <strong>hire</strong> this developer to provide commercial
+   support and/or custom enhancements of CLISP
+   (the only exception to this rule are people who have already
+   contributed to CLISP in the past, or published general Lisp books or
+   are important for some other reason :-).
    This is actually for your own benefit: the CLISP developers are so
-   busy, they might get weeks to answer your question.</dd>
+   busy, they might get weeks to answer your question, as well as for
+   the benefit of the other CLISP users, since the mailing lists are
+   archived and publically available.</dd>
 </dl>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
