removed the exception from the contacting individual developers

--- a/faq.html
+++ b/faq.html
@@ -138,17 +138,14 @@ moved it here.</p>
   <a href="mailto:clisp-devel@lists.sf.net">clisp-devel</a></strong></dt>
   <dd>This is the right place to discuss CLISP internals, submit
    patches, offer help.</dd>
- <dt><strong>Individual CLISP developers</strong></dt>
+ <dt><strong><a href="http://sourceforge.net/project/memberlist.php?group_id=1355">Individual CLISP developers</a></strong></dt>
   <dd>This is <strong>never</strong> the right thing to do, unless you
-   want to <strong>hire</strong> this developer to provide commercial
-   support and/or custom enhancements of CLISP
-   (the only exception to this rule are people who have already
-   contributed to CLISP in the past, or published general Lisp books or
-   are important for some other reason :-).
+   want to <strong>hire</strong> this developer to do CLISP consulting
+   (commercial support, custom enhancements etc).
    This is actually for your own benefit: the CLISP developers are so
-   busy, they might get weeks to answer your question, as well as for
-   the benefit of the other CLISP users, since the mailing lists are
-   archived and publically available.</dd>
+   busy, they might get weeks to answer your question;
+   as well as for the benefit of the other CLISP users,
+   since the mailing lists are publicly archived.</dd>
 </dl>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
