* Changed ftp://ftp.gnu.org to be http://ftp.gnu.org

--- a/impnotes.html
+++ b/impnotes.html
@@ -28615,7 +28615,7 @@ HREF="http://www.gnu.org"
 TARGET="_top"
 >GNU</A
 > <A
-HREF="ftp://ftp.gnu.org/gnu/readline/"
+HREF="http://ftp.gnu.org/gnu/readline/"
 TARGET="_top"
 >readline</A
 ></B
@@ -28676,7 +28676,7 @@ HREF="http://www.gnu.org"
 TARGET="_top"
 >GNU</A
 > <A
-HREF="ftp://ftp.gnu.org/gnu/readline/"
+HREF="http://ftp.gnu.org/gnu/readline/"
 TARGET="_top"
 >readline</A
 >
@@ -28697,7 +28697,7 @@ HREF="http://www.gnu.org"
 TARGET="_top"
 >GNU</A
 > <A
-HREF="ftp://ftp.gnu.org/gnu/readline/"
+HREF="http://ftp.gnu.org/gnu/readline/"
 TARGET="_top"
 >readline</A
 > library is not used
