--- a/impnotes/terminal.html
+++ b/impnotes/terminal.html
@@ -104,7 +104,7 @@ HREF="http://www.gnu.org"
 TARGET="_top"
 >GNU</A
 > <A
-HREF="ftp://ftp.gnu.org/gnu/readline/"
+HREF="http://ftp.gnu.org/gnu/readline/"
 TARGET="_top"
 >readline</A
 ></B
@@ -165,7 +165,7 @@ HREF="http://www.gnu.org"
 TARGET="_top"
 >GNU</A
 > <A
-HREF="ftp://ftp.gnu.org/gnu/readline/"
+HREF="http://ftp.gnu.org/gnu/readline/"
 TARGET="_top"
 >readline</A
 >
@@ -186,7 +186,7 @@ HREF="http://www.gnu.org"
 TARGET="_top"
 >GNU</A
 > <A
-HREF="ftp://ftp.gnu.org/gnu/readline/"
+HREF="http://ftp.gnu.org/gnu/readline/"
 TARGET="_top"
 >readline</A
 > library is not used
