--- a/resources.html
+++ b/resources.html
@@ -102,13 +102,13 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
    <dt id="packages"><strong>packages</strong></dt>
     <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/packages/"
                 >ftp://cvs2.cons.org/pub/lisp/clisp/packages/</a><br/>
-        <a href="ftp://ftp.gnu.org/pub/gnu/clisp/packages/"
-                >ftp://ftp.gnu.org/pub/gnu/clisp/packages/</a></dd>
+        <a href="http://ftp.gnu.org/pub/gnu/clisp/packages/"
+                >http://ftp.gnu.org/pub/gnu/clisp/packages/</a></dd>
    <dt id="contrib"><strong>contrib</strong></dt>
     <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/contrib/"
                 >ftp://cvs2.cons.org/pub/lisp/clisp/contrib/</a><br/>
-        <a href="ftp://ftp.gnu.org/pub/gnu/clisp/contrib/"
-                >ftp://ftp.gnu.org/pub/gnu/clisp/contrib/</a></dd></dl></dd>
+        <a href="http://ftp.gnu.org/pub/gnu/clisp/contrib/"
+                >http://ftp.gnu.org/pub/gnu/clisp/contrib/</a></dd></dl></dd>
  <dt><strong>SLIK</strong> GUI toolkit [Ira Kalet]</dt>
   <dd><a href="ftp://ftp.radonc.washington.edu/pub/slik/"
               >ftp://ftp.radonc.washington.edu/pub/slik/</a><br/>
