keep the ftp://ftp.gnu.org/ too

--- a/resources.html
+++ b/resources.html
@@ -102,11 +102,15 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
    <dt id="packages"><strong>packages</strong></dt>
     <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/packages/"
                 >ftp://cvs2.cons.org/pub/lisp/clisp/packages/</a><br/>
+        <a href="ftp://ftp.gnu.org/pub/gnu/clisp/packages/"
+                >ftp://ftp.gnu.org/pub/gnu/clisp/packages/</a><br/>
         <a href="http://ftp.gnu.org/pub/gnu/clisp/packages/"
                 >http://ftp.gnu.org/pub/gnu/clisp/packages/</a></dd>
    <dt id="contrib"><strong>contrib</strong></dt>
     <dd><a href="ftp://cvs2.cons.org/pub/lisp/clisp/contrib/"
                 >ftp://cvs2.cons.org/pub/lisp/clisp/contrib/</a><br/>
+        <a href="ftp://ftp.gnu.org/pub/gnu/clisp/contrib/"
+                >ftp://ftp.gnu.org/pub/gnu/clisp/contrib/</a><br/>
         <a href="http://ftp.gnu.org/pub/gnu/clisp/contrib/"
                 >http://ftp.gnu.org/pub/gnu/clisp/contrib/</a></dd></dl></dd>
  <dt><strong>SLIK</strong> GUI toolkit [Ira Kalet]</dt>
