--- a/resources.html
+++ b/resources.html
@@ -262,6 +262,9 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
 <table width="100%"><tr><td align="left">
  <a href="http://clisp.cons.org"><img src="clisp.png" width="48"
     height="48" alt="[CLISP home]"/></a></td>
+ <td align="right"><a href="http://sourceforge.net"><img
+     src="http://sourceforge.net/sflogo.php?group_id=1355&amp;type=2"
+     width="125" height="37" alt="SourceForge Logo"/></a></td>
  <td align="right"><a href="http://validator.w3.org/check/referer"><img
      src="http://www.w3.org/Icons/valid-xhtml10"
      alt="Valid XHTML" height="31" width="88"/></a>
