--- a/resources.html
+++ b/resources.html
@@ -42,6 +42,9 @@
 <p><a href="http://www.podval.org/~sds/tool.html">The right tool for
 the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
 
+<p><a href="http://www.apl.jhu.edu/~hall/lisp.html">An Introduction and
+  Tutorial for Common Lisp</a> [<a href="hall@apl.jhu.edu">Marty Hall</a>]</p>
+
 <p><a href="http://www.alu.org/">The Association of Lisp Users</a>
 [<a href="mailto:webmaster@alu.org">Matt Emerson</a>,
  <a href="mailto:howard@elwood.com">Howard R. Stearns</a>]</p>
@@ -179,7 +182,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
 </dl>
 
 <p>See also the
- <a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/ai-repository/ai/lang/lisp/0.html">CMU Common Lisp Repository</a></strong></dt>
+ <a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/ai-repository/ai/lang/lisp/0.html">CMU Common Lisp Repository</a>
  and the <a href="http://www.lisp.org/table/applications.htm">Lisp
 Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
 
