a couple extra links

--- a/faq.html
+++ b/faq.html
@@ -130,14 +130,16 @@ moved it here.</p>
   <dd>This is the right place to ask all general Lisp questions, such
    as "how do I find a character in a string?"</dd>
  <dt><strong>CLISP User Mailing List
-  <a href="mailto:clisp-list@lists.sf.net">clisp-list</a></strong></dt>
+  <a href="http://lists.sourceforge.net/lists/listinfo/clisp-list"
+     >&lt;clisp-list&gt;</a></strong></dt>
   <dd>This is the right place to ask user-level CLISP-specific questions,
    such as <a href="impnotes.html#image">"how do I save my CLISP
    image?"</a></dd>
  <dt><strong>CLISP Developer Mailing List
-  <a href="mailto:clisp-devel@lists.sf.net">clisp-devel</a></strong></dt>
+  <a href="http://lists.sourceforge.net/lists/listinfo/clisp-devel"
+     >&lt;clisp-devel&gt;</a></strong></dt>
   <dd>This is the right place to discuss CLISP internals, submit
-   patches, offer help.</dd>
+   patches, offer help.  You must be subscribed to post.</dd>
  <dt><strong><a href="http://sourceforge.net/project/memberlist.php?group_id=1355">Individual CLISP developers</a></strong></dt>
   <dd>This is <strong>never</strong> the right thing to do, unless you
    want to <strong>hire</strong> this developer to do CLISP consulting
