Which mailing lists should I subscribe to

--- a/faq.html
+++ b/faq.html
@@ -55,6 +55,8 @@ more questions (and answers!)</p>
  <li><a href="#gpl">License - why GNU GPL?</a></li>
  <li><a href="#menorah">Why is CLISP using menorah as the logo?</a></li>
  <li><a href="#help">How do I ask for help?</a></li>
+ <li><a href="#mailing-lists">Which mailing lists should I subscribe
+   to?</a></li>
  <li><a href="#bugs">How do I report bugs?</a></li>
 </ol>
 <hr/>
@@ -149,6 +151,28 @@ moved it here.</p>
    as well as for the benefit of the other CLISP users,
    since the mailing lists are publicly archived.</dd>
 </dl>
+
+<p><a href="#meta">back to Meta</a></p><hr/>
+
+<h3 id="mailing-lists">Which mailing lists should I subscribe to?</h3>
+
+<p>Cross-posting in the CLISP mailing lists is very actively discouraged
+ and is virtually non-existent, thus you can subscribe to all
+ mailing lists that are relevant to you without getting duplicate
+ messages:</p>
+<dl>
+ <dt><a href="http://lists.sourceforge.net/lists/listinfo/clisp-announce"
+        >&lt;clisp-announce&gt;</a></dt>
+ <dd>extremely low-level moderated list, you should definitely subscribe
+  to this list if you have any interest in CLISP whatsoever</dd>
+ <dt><a href="http://lists.sourceforge.net/lists/listinfo/clisp-list"
+        >&lt;clisp-list&gt;</a></dt>
+ <dd>subscribe to this list of you use CLISP and want to ask (and
+  answer!) questions</dd>
+ <dt><a href="http://lists.sourceforge.net/lists/listinfo/clisp-devel"
+        >&lt;clisp-devel&gt;</a></dt>
+ <dd>subscribe to this list if you want to help with CLISP
+  developments; CVS commit notes go here</dd></dl>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
