mention http://alvin.jpl.nasa.gov/gat/ftp/http.lsp

--- a/faq.html
+++ b/faq.html
@@ -256,6 +256,8 @@ moved it here.</p>
           >CLOCC/src/cllib/</a> handles URLs</li>
    <li><a href="http://www.fractalconcept.com/asp/mod_lisp">mod_lisp</a>
     hooks lisp into <a href="http://www.apache.org">Apache</a></li>
+   <li><a href="http://alvin.jpl.nasa.gov/gat/ftp/http.lsp"
+          >Object-Oriented HTTP server for CLISP</a></li>
  </ul>
   <p>Both <a href="http://allegroserve.sourceforge.net/">AllegroServe</a>
   and <a href="http://www.ai.mit.edu/projects/iiip/doc/cl-http/">CL-HTTP</a>
