mention http://alvin.jpl.nasa.gov/gat/ftp/http.lsp

--- a/resources.html
+++ b/resources.html
@@ -179,6 +179,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
      [<a href="mailto:Marc.Battyani@fractalconcept.com">Marc Battyani</a>]</dt>
   <dd><a href="http://www.fractalconcept.com/asp/mod_lisp"
          >http://www.fractalconcept.com/asp/mod_lisp</a></dd>
+ <dt><strong>HTTP.LSP</strong> - An object-oriented HTTP server written in
+  CLISP [<a href="http://www.flownet.com/gat/">Erann Gat</a>]</dt>
+ <dd><a href="http://alvin.jpl.nasa.gov/gat/ftp/http.lsp"
+             >http://alvin.jpl.nasa.gov/gat/ftp/http.lsp</a></dd>
 </dl>
 
 <p>See also the
