mention BioLisp.org

--- a/resources.html
+++ b/resources.html
@@ -80,6 +80,9 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
       >Kent M. Pitman's Second Wind</a>
  [<a href="http://slashdot.org/">Slashdot</a>]</p>
 
+<p><a href="http://biolisp.org">BioLisp.org</a> -
+ Intelligent applications in BioComputing</p>
+
 <h1 id="implementations">Common Lisp implementations</h1>
 
 <h2>Free Implementations</h2>
