--- a/propaganda.html
+++ b/propaganda.html
@@ -73,7 +73,11 @@
 
 <h2>CLISP and Unicode</h2>
 
-<p>Here is a <a href="fibjap.lisp" charset="utf-8">source file</a>
+<p><img src="http://www.unicode.org/webscripts/logo60s2.gif"
+        style="float:left" width="34" height="33" alt="[unicode logo]"/>
+ CLISP fully supports <a href="http://www.unicode.org">Unicode</a>
+ <a href="http://www.unicode.org/unicode/reports/tr28/">3.2</a>.
+ Here is a <a href="fibjap.lisp" charset="utf-8">source file</a>
  with Japanese characters in it.
  <a href="fibjap-emacs.png">Edited in GNU Emacs</a>,
  then <a href="fibjap-xterm.png">run in xterm</a>.</p>
