--- a/faq.html
+++ b/faq.html
@@ -46,6 +46,7 @@ more questions (and answers!)</p>
 <ol>
  <li><a href="#meta">Meta information</a></li>
  <li><a href="#run">Running CLISP</a></li>
+ <li><a href="#trouble">Troubles</a></li>
 </ol>
 <hr/>
 
@@ -124,6 +125,8 @@ moved it here.</p>
 
 <h3 id="help">How do I ask for help?</h3>
 
+<p>Politely :-)</p>
+
 <p>If you have a question about CLISP, you have the following options
  (listed in the order of decreasing audience size):</p>
 
@@ -172,13 +175,13 @@ moved it here.</p>
  <dt><a href="http://lists.sourceforge.net/lists/listinfo/clisp-devel"
         >&lt;clisp-devel&gt;</a></dt>
  <dd>subscribe to this list if you want to help with CLISP
-  developments; CVS commit notes go here</dd></dl>
+  developments; CVS commit notes go here (as a daily digest).</dd></dl>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
 <h3 id="bugs">How do I report bugs?</h3>
 
-<p><a href="clisp.html#bugs">Read The Fine Manual</a>!</p>
+<p><a href="clisp.html#bugs">Patiently</a>!</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
@@ -188,14 +191,11 @@ moved it here.</p>
 <ol>
  <li><a href="#ide">where is the IDE?</a></li>
  <li><a href="#opt">what are the command line arguments?</a></li>
- <li><a href="#enc-err">invalid byte #x94 in CHARSET:ASCII conversion</a></li>
- <li><a href="#rl-tab">Display all 1259 possibilities? (y or n)</a></li>
- <li><a href="#stack">stack overflow</a></li>
  <li><a href="#ext">What CLISP extensions are available?</a></li>
 </ol>
 <hr/>
 
-<h3 id="ide">where is the IDE?</h3>
+<h3 id="ide">Where is the IDE?</h3>
 
 <p>Use <a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>,
  running CLISP as an "inferior lisp"
@@ -208,60 +208,9 @@ moved it here.</p>
 
 <p><a href="#run">back to Running</a></p><hr/>
 
-<h3 id="opt">what are the command line arguments?</h3>
+<h3 id="opt">What are the command line arguments?</h3>
 
 <p><a href="clisp.html">Read The Fine Manual</a>!</p>
-
-<p><a href="#run">back to Running</a></p><hr/>
-
-<h3 id="enc-err">invalid byte #x94 in CHARSET:ASCII conversion</h3>
-
-<p>This means that you are trying to read a non-ASCII character from a
- stream which has
- <a href="impnotes.html#charset-ASCII">ASCII</a>
- <a href="impnotes.html#extfmt">STREAM-EXTERNAL-FORMAT</a>.
- The default is described in
- <a href="clisp.html#opt-enc">The Fine Manual</a>.</p>
-
-<p><a href="#run">back to Running</a></p><hr/>
-
-<h3 id="rl-tab">Display all 1259 possibilities? (y or n)</h3>
-
-<p><a href="http://clisp.cons.org">CLISP</a> uses
- <a href="http://cnswww.cns.cwru.edu/~chet/readline/rltop.html">GNU
-  readline</a> for command line editing and
- <a href="clisp.html#completion">completion</a>.
- You get this "Display all 1259 possibilities" message (and sometimes
- many screens of symbols) when you hit <code>TAB</code> too many times.
- <a href="clisp.html#opt-ilisp">You can turn this feature off</a>
- if you are using Emacs.</p>
-
-<p><a href="#run">back to Running</a></p><hr/>
-
-<h3 id="stack">stack overflow</h3>
-
-<dl><dt><strong>generic</strong></dt>
- <dd><ul>
-   <li>You will always get a lisp stack overflow when you try to print a
-    circular object (list or structure) and <code>*PRINT-CIRCLE*</code>
-    is <code>NIL</code>.
-    Just set <code>*PRINT-CIRCLE*</code> to <code>T</code></li>
-   <li>You will always get a stack overflow on infinite recursion.
-    Some simple functions (like Ackerman's) recurse more than you
-    expect and can run out of stack on relatively small inputs.</li></ul></dd>
-<dt><strong>win32</strong></dt>
- <dd>answered
-  <a href="http://sourceforge.net/mailarchive/message.php?msg_id=1785942"
-     >here</a> and
-  <a href="http://sourceforge.net/mailarchive/message.php?msg_id=1662294"
-     >here</a> on
-  <a href="http://lists.sourceforge.net/lists/listinfo/clisp-list"
-     >&lt;clisp-list&gt;</a></dd>
-<dt><strong>unix</strong></dt>
- <dd>Increase program stack with <code>ulimit -s</code> (or <code>limit
-   stacksize</code> if you are using
-  <a href="http://www.faqs.org/faqs/unix-faq/shell/csh-whynot/"
-     ><code>csh</code></a>) to at least 8 MB.</dd></dl>
 
 <p><a href="#run">back to Running</a></p><hr/>
 
@@ -291,9 +240,80 @@ moved it here.</p>
   and <a href="http://www.ai.mit.edu/projects/iiip/doc/cl-http/">CL-HTTP</a>
   require multithreading and do not work with CLISP.</p></dd></dl>
 
-<p></p>
-
 <p><a href="#run">back to Running</a></p><hr/>
+
+<p><a href="#index">index</a></p><hr/>
+
+<h2 id="trouble">Troubles</h2>
+
+<ol>
+ <li><a href="#enc-err">invalid byte #x94 in CHARSET:ASCII conversion</a></li>
+ <li><a href="#rl-tab">Display all 1259 possibilities? (y or n)</a></li>
+ <li><a href="#stack">stack overflow</a></li>
+</ol>
+<hr/>
+
+<h3 id="enc-err">invalid byte #x94 in CHARSET:ASCII conversion</h3>
+
+<p>This means that you are trying to read a non-ASCII character from a
+ stream which has
+ <a href="impnotes.html#charset-ASCII">ASCII</a>
+ <a href="impnotes.html#extfmt">STREAM-EXTERNAL-FORMAT</a>.
+ The default is described in
+ <a href="clisp.html#opt-enc">The Fine Manual</a>.</p>
+
+<p><a href="#trouble">back to Troubles</a></p><hr/>
+
+<h3 id="rl-tab">Display all 1259 possibilities? (y or n)</h3>
+
+<p><a href="http://clisp.cons.org">CLISP</a> uses
+ <a href="http://cnswww.cns.cwru.edu/~chet/readline/rltop.html">GNU
+  readline</a> for command line editing and
+ <a href="clisp.html#completion">completion</a>.
+ You get this "Display all 1259 possibilities" message (and sometimes
+ many screens of symbols) when you hit <code>TAB</code> too many times.
+ <a href="clisp.html#opt-ilisp">You can turn this feature off</a>
+ if you are using Emacs.</p>
+
+<p><a href="#trouble">back to Troubles</a></p><hr/>
+
+<h3 id="stack">stack overflow</h3>
+
+<p>CLISP has <a href="impnotes.html#vm"><em>two</em> stacks</a>, and
+ both may overflow.</p>
+
+<h4>Avoiding stack overflow: Generic</h4>
+<ul><li>You will always get a stack overflow when you try to
+  print a circular object (list or structure)
+  and <code>*PRINT-CIRCLE*</code> is <code>NIL</code>.
+  Just set <code>*PRINT-CIRCLE*</code> to <code>T</code>.</li>
+ <li>You will always get a stack overflow on infinite recursion.</li>
+ <li>Some simple functions (like Ackerman's) recurse more than you
+  expect and can run out of stack on relatively small inputs.</li>
+ <li>Compiled code uses less stack (and memory) and is faster.</li>
+ <li>If you really do need more Lisp stack, you can increase it by
+  telling CLISP to <a href="clisp.html#opt-memsize">pre-allocate more
+   memory</a>.</li>
+ <li>If you get a segmentation fault after (or instead of) a "program
+  stack overflow" message, please make sure that you had
+  <a href="http://sourceforge.net/projects/libsigsegv">GNU libsigsegv</a>
+  installed when you built CLISP.</li></ul>
+
+<h4>Avoiding stack overflow: Platform-specific</h4>
+<dl><dt><strong>win32</strong></dt>
+ <dd><a href="http://sourceforge.net/mailarchive/message.php?msg_id=1785942"
+        >modify SYSTEM.INI or change PIF that you use to invoke CLISP</a> or
+  <a href="http://sourceforge.net/mailarchive/message.php?msg_id=1662294"
+     >set program stack using editbin</a> (answered on
+  <a href="http://lists.sourceforge.net/lists/listinfo/clisp-list"
+     >&lt;clisp-list&gt;</a>)</dd>
+<dt><strong>unix</strong></dt>
+ <dd>Increase program stack with <code>ulimit -s</code> (or <code>limit
+   stacksize</code> if you are using
+  <a href="http://www.faqs.org/faqs/unix-faq/shell/csh-whynot/"
+     ><code>csh</code></a>) to at least 8 MB.</dd></dl>
+
+<p><a href="#trouble">back to Troubles</a></p><hr/>
 
 <p><a href="#index">index</a></p><hr/>
 
