--- a/resources.html
+++ b/resources.html
@@ -41,7 +41,7 @@
 
 <p><a href="http://www.ai.mit.edu/docs/articles/good-news/good-news.html"
       >Lisp: Good News, Bad News, How to Win Big</a>
- by <a href="http://www.dreamsongs.com/">Richard P. Gabriel</a></p>
+ [<a href="http://www.dreamsongs.com/">Richard P. Gabriel</a>]</p>
 
 <p><a href="http://www.podval.org/~sds/tool.html">The right tool for
 the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
