maxima is now a sourceforge project

--- a/resources.html
+++ b/resources.html
@@ -146,11 +146,6 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
    [<a href="mailto:hans@math.uni-wuppertal.de">Hans Groschwitz</a>]</dt>
   <dd><a href="http://www.iai.uni-wuppertal.de/EMA-XPS/"
               >http://www.iai.uni-wuppertal.de/EMA-XPS/</a></dd>
- <dt><strong>Maxima</strong>, a descendant of Macsyma [Bill Schelter]</dt>
-  <dd><a href="http://www.ma.utexas.edu/users/wfs/maxima.html"
-              >http://www.ma.utexas.edu/users/wfs/maxima.html</a><br/>
-      <a href="http://www.gnu.org/software/maxima/"
-              >http://www.gnu.org/software/maxima/</a></dd>
  <dt><strong>ACL2</strong> (Applicative Common Lisp)
   - a computational logic system
   [<a href="mailto:kaufmann@cs.utexas.edu">Matt Kaufmann</a>,
@@ -270,6 +265,14 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
    function as an extension language for Java.
    It can also be used to expose Java APIs (such as Swing and DOM) to
    Lisp applications.</dd>
+ <dt><strong>Maxima - a descendant of Macsyma</strong>
+  [<a href="http://sourceforge.net/projects/maxima/">project</a>
+   <a href="http://maxima.sourceforge.net/">home</a>]</dt>
+  <dd>Maxima is a fairly complete computer algebra system written in
+   lisp with an emphasis on symbolic computation.
+   It is based on DOE-MACSYMA and licensed under the GPL.
+   Its abilities include symbolic integration, 3D plotting, and an ODE
+   solver.</dd>
 </dl>
 
 <hr/>
