added links to http://www.pascalcostanza.de/lisp/guide.html and Franz's comparisons CLOS with C++ and Java

--- a/resources.html
+++ b/resources.html
@@ -49,6 +49,15 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
 <p><a href="http://www.apl.jhu.edu/~hall/lisp.html">An Introduction and
   Tutorial for Common Lisp</a> [<a href="hall@apl.jhu.edu">Marty Hall</a>]</p>
 
+<p><a href="http://www.pascalcostanza.de/lisp/guide.html">Highly
+  Opinionated Guide to Lisp</a>
+ [<a href="mailto:costanza@web.de">Pascal Costanza</a>]</p>
+
+<p><a href="http://www.franz.com/">Franz</a>: CLOS compared with
+ <a href="http://www.franz.com/resources/educational_resources/clos_versus_other/cpp.lhtml">C++</a> and
+ <a href="http://www.franz.com/resources/educational_resources/clos_versus_other/java.lhtml">Java</a>;
+ <a href="http://www.franz.com/resources/lisp_links.lhtml">and more</a></p>
+
 <p><a href="http://www.alu.org/">The Association of Lisp Users</a>
 [<a href="mailto:webmaster@alu.org">Matt Emerson</a>,
  <a href="mailto:howard@elwood.com">Howard R. Stearns</a>]</p>
@@ -180,7 +189,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
      <a href="http://www.apache.org">Apache</a>
      [<a href="mailto:Marc.Battyani@fractalconcept.com">Marc Battyani</a>]</dt>
   <dd><a href="http://www.fractalconcept.com/asp/mod_lisp"
-         >http://www.fractalconcept.com/asp/mod_lisp</a></dd>
+              >http://www.fractalconcept.com/asp/mod_lisp</a></dd>
  <dt><strong>Meta-CVS</strong> - a version control system layered on top
   of <a href="http://www.cvshome.org">CVS</a>
   [<a href="http://users.footprints.net/~kaz/">Kaz Kylheku</a>]</dt>
